@@ -3,6 +3,8 @@ package com.infernumvii.controller;
 import java.io.Serializable;
 import java.util.ArrayDeque;
 import java.util.Deque;
+import java.util.LinkedList;
+import java.util.List;
 
 import com.infernumvii.model.TableRow;
 
@@ -19,12 +21,12 @@ import lombok.Setter;
 @NoArgsConstructor
 public class TableController implements Serializable {
     private final int HISTORY_SIZE = 18;
-    private final Deque<TableRow> history = new ArrayDeque<TableRow>(HISTORY_SIZE);
+    private final List<TableRow> history = new LinkedList<TableRow>();
 
     public void storeRow(TableRow row){
         if (history.size() >= HISTORY_SIZE) {
-            history.removeFirst(); 
+            history.remove(0); 
         }
-        history.addLast(row);
+        history.add(row);
     }
 }
